Styling: Fix dark mode colors

--- a/prosjekt2/frontend/src/components/AllSongsComponents/AllSongsList.css
+++ b/prosjekt2/frontend/src/components/AllSongsComponents/AllSongsList.css
@@ -83,3 +83,9 @@ td {
 		width: 330px;
 	}
 }
+
+@media (prefers-color-scheme: dark){
+	.tableRow {
+		border-color: var(--theme-darker-green);
+	}
+}
